--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "gitignore-patterns",
-  "private": true,
-  "version": "0.0.0",
+  "description": "A quick web app to visualize .gitignore pattern syntax, using @gerhobbelt/gitignore-parser as its backend.",
+  "author": "Moritz Rehbach",
+  "license": "SEE LICENSE IN LICENSE.md",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +19,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "clsx": "^1.2.1",
+    "postcss-preset-env": "8.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
