--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
     "react": "^18.2.0",
+    "react-error-boundary": "3.1.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
