--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
     "react": "^18.2.0",
     "react-error-boundary": "3.1.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.8.1",
+    "react-router-dom": "6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
