--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
     "react": "^18.2.0",
-    "react-error-boundary": "3.1.4",
+    "react-error-boundary": "^3.1.4",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
-    "react-router-dom": "6.8.1"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "clsx": "^1.2.1",
-    "postcss-preset-env": "8.0.1",
+    "postcss-preset-env": "^8.0.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
