--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^1.2.1",
     "postcss-preset-env": "^8.0.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-tsconfig-paths": "4.0.5"
   }
 }
