--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": "^18",
+    "npm": "^8"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "format": "npx prettier --write ./src",
+    "lint": "eslint ./src",
     "preview": "vite preview"
   },
   "dependencies": {
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
+    "lodash-es": "4.17.21",
     "react": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-dom": "^18.2.0",
@@ -21,11 +28,21 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/lodash-es": "^4.17.6",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.0.0",
     "clsx": "^1.2.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^7",
     "postcss-preset-env": "^8.0.1",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.0.5"
   }
 }
