--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx",
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*", "./node_modules/*"]
     }
   },
   "include": ["src", "postcss.config.cjs"],
