--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "version": "0.0.1",
   "type": "module",
   "engines": {
-    "node": "^18",
-    "npm": "^8"
+    "node": ">=18.14",
+    "npm": "^9"
   },
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
-    "lodash-es": "4.17.21",
+    "@chakra-ui/react": "2.5.1",
+    "@paralleldrive/cuid2": "2.2.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-dom": "^18.2.0",
