--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@geist-ui/core": "2.3.8",
+    "@geist-ui/icons": "1.0.2",
     "@gerhobbelt/gitignore-parser": "0.2.0-9",
-    "@chakra-ui/react": "2.5.1",
     "@paralleldrive/cuid2": "2.2.0",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "react-error-boundary": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-react": "^3.0.0",
@@ -43,6 +44,7 @@
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
+    "typescript-plugin-css-modules": "^4.2.2",
     "vite": "^4.0.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.0.5"
