--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "usehooks-ts": "2.9.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
@@ -41,6 +42,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^7",
+    "postcss-nesting": "^11.2.1",
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
