--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1",
-    "usehooks-ts": "2.9.1"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
