--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "format": "npx prettier --write ./src",
-    "lint": "eslint ./src",
+    "format": "prettier --write ./src",
+    "lint": "tsc && eslint --max-warnings=0 ./src",
     "preview": "vite preview"
   },
   "dependencies": {
