Fix #1 - Replace ignore parser

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,9 +4,10 @@
   "trailingComma": "es5",
   "overrides": [
     {
-      "files": "tailwind.config.cjs",
+      "files": ["README.md"],
       "options": {
-        "printWidth": 120
+        "printWidth": 80,
+        "proseWrap": "always"
       }
     }
   ]
