--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@geist-ui/core": "2.3.8",
     "@geist-ui/icons": "1.0.2",
     "@paralleldrive/cuid2": "2.2.0",
+    "css-has-pseudo": "5.0.2",
     "ignore": "^5.2.4",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -45,7 +46,7 @@
     "postcss-preset-env": "^8.0.1",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
-    "typescript-plugin-css-modules": "^4.2.2",
+    "typescript-plugin-css-modules": "^4.2.3",
     "vite": "^4.0.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.0.5"
